--- a/spa-cli/pyproject.toml
+++ b/spa-cli/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "spa-cli"
-version = "0.6.0"
+version = "1.0.0"
 description = "Un cli para manejar proyectos serverless en aws con python"
 authors = ["David Cuy <david.cuy.sanchez@gmail.com>"]
 readme = "README.md"
@@ -21,6 +21,7 @@ toml = "^0.10.2"
 cookiecutter = "^2.6.0"
 setuptools = "^80.9.0"
 pydantic = "^2.11.9"
+typer = "^0.19.1"
 
 
 [build-system]
